chore: fix layout shift in desktop

--- a/docs/.vitepress/theme/style.css
+++ b/docs/.vitepress/theme/style.css
@@ -143,6 +143,10 @@
   --docsearch-primary-color: var(--vp-c-brand-1) !important;
 }
 
+body {
+  overflow-y: scroll;
+}
+
 @media (min-width: 960px) {
   .VPSidebar {
     transform: none !important;
